// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomTextInput tests renders on android 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    dataSet={{}}
    isInvalid={false}
    isReadOnly={false}
    isRequired={false}
    style={
      {
        "width": "100%",
      }
    }
  >
    <View
      dataSet={{}}
      feedbackId="field-8-feedback"
      hasFeedbackText={true}
      hasHelpText={false}
      helpTextId="field-8-helptext"
      isDisabled={false}
      isInvalid={false}
      isReadOnly={false}
      isRequired={false}
      labelId="field-8-label"
      nativeID="field-8-label"
      setHasFeedbackText={[Function]}
      setHasHelpText={[Function]}
      style={
        {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginBottom": 4,
          "marginTop": 4,
        }
      }
    >
      <Text
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#737373",
            "fontFamily": undefined,
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 21,
            "textDecorationLine": undefined,
          }
        }
      >
        test custom text input
      </Text>
    </View>
    <View
      dataSet={{}}
      isFocused={false}
      style={
        {
          "alignItems": "center",
          "borderColor": "#d4d4d4",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "row",
          "overflow": "hidden",
        }
      }
    >
      <TextInput
        accessibilityDescribedBy="field-8-feedback"
        accessible={true}
        blurOnSubmit={false}
        dataSet={{}}
        disabled={false}
        editable={true}
        isRequired={false}
        maxLength={255}
        nativeID="field-8-input"
        onBlur={[Function]}
        onChangeText={[MockFunction]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        onSubmitEditing={[Function]}
        placeholder="custom text input placeholder"
        placeholderTextColor="#a3a3a3"
        readOnly={false}
        required={false}
        returnKeyType="done"
        secureTextEntry={false}
        style={
          {
            "backgroundColor": "transparent",
            "color": "#171717",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "400",
            "height": "100%",
            "paddingBottom": 8,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 8,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`CustomTextInput tests renders on ios 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    dataSet={{}}
    isInvalid={false}
    isReadOnly={false}
    isRequired={false}
    style={
      {
        "width": "100%",
      }
    }
  >
    <View
      dataSet={{}}
      feedbackId="field-2-feedback"
      hasFeedbackText={true}
      hasHelpText={false}
      helpTextId="field-2-helptext"
      isDisabled={false}
      isInvalid={false}
      isReadOnly={false}
      isRequired={false}
      labelId="field-2-label"
      nativeID="field-2-label"
      setHasFeedbackText={[Function]}
      setHasHelpText={[Function]}
      style={
        {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginBottom": 4,
          "marginTop": 4,
        }
      }
    >
      <Text
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#737373",
            "fontFamily": undefined,
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 21,
            "textDecorationLine": undefined,
          }
        }
      >
        test custom text input
      </Text>
    </View>
    <View
      dataSet={{}}
      isFocused={false}
      style={
        {
          "alignItems": "center",
          "borderColor": "#d4d4d4",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "row",
          "overflow": "hidden",
        }
      }
    >
      <TextInput
        accessibilityDescribedBy="field-2-feedback"
        accessible={true}
        blurOnSubmit={false}
        dataSet={{}}
        disabled={false}
        editable={true}
        isRequired={false}
        maxLength={255}
        nativeID="field-2-input"
        onBlur={[Function]}
        onChangeText={[MockFunction]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        onSubmitEditing={[Function]}
        placeholder="custom text input placeholder"
        placeholderTextColor="#a3a3a3"
        readOnly={false}
        required={false}
        returnKeyType="done"
        secureTextEntry={false}
        style={
          {
            "backgroundColor": "transparent",
            "color": "#171717",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "400",
            "height": "100%",
            "paddingBottom": 8,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 8,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</RNCSafeAreaProvider>
`;
